# agent-verify

./: .gitignore  README.md  exp11_full500_final.exp11_full500_final.json  exp12_hard45_final.exp12_hard45_final.json  pyproject.toml
configs/: base.yaml  smoke_test.yaml
configs/experiments/: bst_test.yaml  compaction_128k_qwen_lite_dev.yaml  compaction_qwen_lite_dev.yaml  exp11_full500.yaml  exp11_hard45.yaml  exp11_hard45_v2.yaml  exp11_prompt_v2.yaml  exp11_test1.yaml  exp12_hard45.yaml  exp6_enhanced_aci.yaml  exp7_aci_lite_test.yaml  exp8_qwen35b_verified.yaml  exp9_100step_compaction.yaml  phase1_v2_test_execution.yaml  ralph_test.yaml  v0_baseline_10.yaml  v0_claude_full.yaml  v0_qwen_10.yaml  v0_qwen_full.yaml  v0_qwen_lite_dev.yaml  v0_qwen_single.yaml  v2_qwen_10.yaml  v2_qwen_single.yaml  v2_test_exec_10.yaml
docs/: RESEARCH_PLAN.md
exp-log/: EXPERIMENTS.md  experiment_6_design.md  results.json  swebench_verified_hard.md
exp-log/docker_reports/: compaction_128k.compaction_128k.json  compaction_32k.compaction_32k.json  compaction_qwen_lite_dev.compaction_qwen_lite_dev.json  exp6_batch2.exp6_batch2.json  exp6_batch3.exp6_batch3.json  exp6_batch4.exp6_batch4.json  exp6_batch5.exp6_batch5.json  (+18 more)
figures/: plot_hard_cumulative.py  plot_hard_leaderboard.py  plot_hard_subset.py
scripts/: bst_agent.py  docker_eval.py  error_analysis.py  explore_dataset.py  inspect_task.py  ralph_loop.py  run_compaction_experiment.py  run_experiment.py  select_tasks.py  trace_viewer.py
tests/: test_config.py  test_recovery.py  test_tools.py  test_verification.py
(+28 files in other folders)
