[project]
name = "agent-verify"
version = "0.1.0"
description = "Systematic study of self-verification strategies in agentic coding harnesses"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.42.0",
    "datasets>=3.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_verify"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
